force-app/main/default/objects/cdcpc__RD_LeadTimeLineItems__c/cdcpc__RD_LeadTimeLineItems__c.object-meta.xml
<CustomObject>
    <label>RD LeadTime Line Item</label>
    <nameField>
        <displayFormat>RDRLT-{0000}</displayFormat>
        <label>RD LeadTime Line Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RD LeadTime Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>