force-app/main/default/objects/cdcpc__RD_LeadTimeLineItems__c/fields/cdcpc__Site_20_Override__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Site_20_Override__c</fullName>
    <label>Site 20 Override</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>