force-app/main/default/objects/cdcpc__RD_LeadTimeLineItems__c/fields/cdcpc__Site_30__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Site_30__c</fullName>
    <label>Site 30</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>