force-app/main/default/objects/cdcpc__RD_LeadTimeLineItems__c/fields/cdcpc__Site_30_Override__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Site_30_Override__c</fullName>
    <label>Site 30 Override</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>